--- a/store/templates/accounts.html
+++ b/store/templates/accounts.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load socialaccount %}
+{% providers_media_js %}
+
 
 <div class="breadcrumb_section bg_gray page-title-mini">
     <div class="container"><!-- START CONTAINER -->
@@ -70,6 +73,7 @@
                                                     <button type="submit" class="btn btn-fill-out btn-block" name="login">Log in</button>
                                                 </div>
                                             </form>
+<!--                                            href="{% provider_login_url 'facebook' method='oauth2' %}" class="btn btn-facebook"-->
                                             <div class="different_login"><span> or</span></div>
                                             <ul class="btn-login list_none text-center">
                                                 <li><a href="#" class="btn btn-facebook"><i class="ion-social-facebook"></i>Facebook</a></li>
@@ -120,7 +124,7 @@
                                             </form>
                                             <div class="different_login"><span> or</span></div>
                                             <ul class="btn-login list_none text-center">
-                                                <li><a href="#" class="btn btn-facebook"><i class="ion-social-facebook"></i>Facebook</a></li>
+                                                <li><a href="#"><i class="ion-social-facebook"></i>Facebook</a></li>
                                                 <li><a href="#" class="btn btn-google"><i class="ion-social-googleplus"></i>Google</a></li>
                                             </ul>
                                         </div>
