--- a/store/templates/blank.html
+++ b/store/templates/blank.html
@@ -132,3 +132,59 @@
 </div>
 
 {% endblock %}
+
+<!--{% for arrival in new_arrivals %}-->
+<!--                        <div class="item">-->
+<!--                        <div class="product">-->
+<!--                            <div class="product_img">-->
+<!--                                <a href="product-detail.html">-->
+<!--                                    <img src="{{arrival.product.image.url}}"-->
+<!--                                         alt="product_img1">-->
+<!--                                </a>-->
+<!--                                <div class="product_action_box">-->
+<!--                                    <ul class="list_none pr_action_btn">-->
+<!--                                         <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>-->
+<!--														Add To Cart</a></li>-->
+<!--                                        <li><a href="javascript:void(0);" class="popup-ajax"><i-->
+<!--                                                class="icon-shuffle"></i></a></li>-->
+<!--                                        <li><a href="javascript:void(0);" class="popup-ajax"><i-->
+<!--                                                class="icon-magnifier-add"></i></a></li>-->
+<!--                                        <li><a href="#"><i class="icon-heart"></i></a></li>-->
+<!--                                    </ul>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="product_info">-->
+<!--                                <h6 class="product_title"><a href="product-detail.html">{{arrival.product.product_title}}</a></h6>-->
+<!--                                <div class="product_price">-->
+<!--                                    <span class="price">₹45.00</span>-->
+<!--                                    <del>₹55.25</del>-->
+<!--                                    <div class="on_sale">-->
+<!--                                        <span>35% Off</span>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="rating_wrap">-->
+<!--                                    <div class="rating">-->
+<!--                                        <div class="product_rate" style="width:80%"></div>-->
+<!--                                    </div>-->
+<!--                                    <span class="rating_num">(21)</span>-->
+<!--                                </div>-->
+<!--                                <div class="pr_desc">-->
+<!--                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus-->
+<!--                                        blandit massa enim. Nullam id varius nunc id varius nunc.</p>-->
+<!--                                </div>-->
+<!--                                <div class="pr_switch_wrap">-->
+<!--                                    <div class="product_color_switch">-->
+<!--                                        <span class="active" data-color="#87554B"></span>-->
+<!--                                        <span data-color="#333333"></span>-->
+<!--                                        <span data-color="#DA323F"></span>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--               {% endfor %}-->
+
+
+
+<!--SOCIAL_AUTH_FACEBOOK_KEY='1487754122619293'-->
+<!--SOCIAL_AUTH_FACEBOOK_SECRET='4b7045d08fe04516fdb637419e69101f'-->
