--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -51,7 +51,9 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="/static/assets/css/style.css">
     <link rel="stylesheet" href="/static/assets/css/responsive.css">
-
+<!--    My Added-->
+<!-- magnificPopup CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
     <style>
         .thing {
             -webkit-font-smoothing: antialiased;
@@ -274,6 +276,7 @@
                 <div class="col-6">
                     <div class="text-end text-md-end">
                         <ul class="header_list">
+                            <li>Welcome to {{request.session.user}}</li>
                             <li><a href="/compare"><i class="ti-control-shuffle"></i><span></span></a></li>
                             <li><a href="/wishlist"><i class="ti-heart"></i><span></span></a></li>
                             <li><a href="/account"><i class="ti-user"></i><span></span></a></li>
@@ -369,8 +372,7 @@
                             </div>
                         </div>
                     </li>
-<!--                    <li><p class="dropdown-item nav-link nav_item ">Welcome to {{request.session.user}}</p>-->
-<!--                    </li>-->
+<!--                   aaaa-->
                 </ul>
             </nav>
         </div>
@@ -714,6 +716,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+<!--my added-->
+    <!-- magnificPopup JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+<!-- elevateZoom JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/3.0.8/jquery.elevatezoom.min.js"></script>
+<script src="C:\Users\SHIVANYA SALES\PycharmProjects\yourjinnie1\static\assets\js\scripts.jsscript.js"></script>
+
 {% block js %} {% endblock %}
 </body>
 
